<resources>
    <string name="app_name" translatable="false">Broccoli</string>
    <string name="recipes">Recipes</string>
    <string name="no_recipes_found">No recipes found.</string>
    <string name="create_a_recipe_prompt">create a new recipe</string>
    <string name="import_from_the_web_prompt">import a recipe from a website</string>
    <string name="new_recipe">New Recipe</string>
    <string name="create_first_recipe">Create your first recipe and start your collection!</string>
    <string name="edit_action">Edit</string>
    <string name="save_action">Save</string>
    <string name="title_should_not_be_empty_message">Please add a title.</string>
    <string name="recipe_saved_message">The recipe has been saved.</string>
    <string name="recipe_could_not_be_saved_message">The recipe could not be saved.</string>
    <string name="delete_action">Delete</string>
    <string name="delete_recipe_question">Delete this recipe?</string>
    <string name="recipe_deleted_message">The recipe has been deleted.</string>
    <string name="discard_action">Discard</string>
    <string name="discard_changes_question">Discard changes?</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="source">Source</string>
    <string name="servings">Servings</string>
    <string name="preparation_time">Time</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="recipe_photo_accessibility">Recipe photo</string>
    <string name="change_photo">Change photo</string>
    <string name="remove_photo">Remove photo</string>
    <string name="take_photo">Take photo</string>
    <string name="pick_photo">Pick photo</string>
    <string name="image_could_not_be_created_message">The image file could not be created.</string>
    <string name="categories">Categories</string>
    <string name="create_a_category_prompt">Create custom categories to manage your recipes.</string>
    <string name="add_category">Add category</string>
    <string name="add_first_category">Add your first custom category and bring order into your collection!</string>
    <string name="edit_category">Edit category</string>
    <string name="category_name">Name</string>
    <string name="no_categories_message">No categories have been created yet.</string>
    <string name="all_recipes">All recipes</string>
    <string name="mark_as_favorite_action">Mark as favorite</string>
    <string name="remove_from_favorite_action">Remove from favorites</string>
    <string name="favorites">Favorites</string>
    <string name="delete_category_question">Do you really want to delete this category?</string>
    <string name="unassigned">Recipes without category</string>
    <string name="search">Search</string>
    <string name="search_in">Search in %1$s</string>
    <string name="preferred_category">Preferred category</string>
    <string name="cooking_assistant">Cooking assistant</string>
    <string name="cooking_assistant_prompt">Cook your recipe in fullscreen mode without distractions!</string>
    <string name="no_ingredients_and_directions_message">This recipe does not have any ingredients or directions yet.</string>
    <string name="cook_action">Cook</string>
    <string name="adjust_ingredients">Adjust ingredients</string>
    <string name="adjust_ingredients_prompt">Choose how many servings you want to cook!</string>
    <string name="scaling_simple">Simple</string>
    <string name="scaling_pro">Pro</string>
    <string name="recipe_amount">Recipe amount</string>
    <string name="scaling_factor">Scaling factor</string>
    <string name="unscaled">not adjusted</string>
    <string name="share_action">Share</string>
    <string name="shared_with">Shared with %1$s</string>
    <string name="recipe_could_not_be_imported_message">Sorry, this did not work.</string>
    <string name="recipe_could_not_be_read_message">Sorry, this recipe can not be read.</string>
    <string name="share_as_file_action">Share as file</string>
    <string name="recipe_could_not_be_exported_message">The recipe could not be exported.</string>
    <string name="backup_and_restore">Backup and restore</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_recipes">Backup recipes</string>
    <string name="backup_recipes_message">Export all your recipes and categories and save them wherever you want.</string>
    <string name="restore_recipes">Restore recipes</string>
    <string name="restore_recipes_message">Import all recipes and categories from a backup file.</string>
    <string name="backup_failed_message">The recipes could not be exported.</string>
    <string name="restore_failed_message">The recipes could not be imported.</string>
    <string name="restore_all_question">Do you want to import all recipes and categories from this file?</string>
    <string name="restore_completed_message">%1$d recipes have been imported.</string>
    <string name="last_backup">Last backup</string>
    <string name="about_the_app">About the app</string>
    <string name="help">Help</string>
    <string name="legal_policies">Legal</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_mailto" translatable="false">mailto:support@flauschcode.com</string>
    <string name="send_feedback_message">Did you find a bug or do you miss a feature? </string>
    <string name="feedback_subject">Feedback for Broccoli app</string>
    <string name="version">Version</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General settings</string>
    <string name="design">Theme</string>
    <string name="MODE_NIGHT_NO" translatable="false">MODE_NIGHT_NO</string>
    <string name="MODE_NIGHT_YES" translatable="false">MODE_NIGHT_YES</string>
    <string name="MODE_NIGHT_FOLLOW_SYSTEM" translatable="false">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System default</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_summary">Learn more about how we protect your personal data.</string>
    <string name="privacy_policy_url" translatable="false">https://flauschcode.com/broccoli-privacy-policy/</string>
    <string name="demo_recipe">Demo recipe</string>
    <string name="link_to_demo_recipe">https://flauschcode.com/hummus-creamy-and-delicious/</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="open_source_licenses_text">License details for open source software</string>
    <string name="seasonal_calendar">Seasonal calendar</string>
    <string name="seasonal_accessibility">Seasonal ingredient(s)</string>
    <string name="seasonal_recipes">Seasonal recipes</string>
    <string name="seasonal_ingredients_accessibility">Seasonal ingredients</string>
    <string name="seasons_not_configured_message">The seasonal calendar has not been fully configured yet.</string>
    <string name="configure_seasons_action">Configure</string>
    <string name="seasons_month_range" translatable="false">%1$s - %2$s</string>
    <string name="region">Region</string>
    <string name="languages_of_recipes">Languages of recipes</string>
    <string name="no_language_set_message">In which languages do you create your recipes? Choose at least one language.</string>
    <string name="seasons_feedback_message">Do you miss your region, language or favorite ingredient?</string>
    <string name="seasons_feedback_subject">Feedback for Seasonal Calendar</string>
    <string name="region_central_europe">Central Europe</string>
    <string name="region_north_america_colder">North America (colder)</string>
    <string name="region_north_america_warmer">North America (warmer)</string>
    <string name="region_japan">Japan</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="polish">Polish</string>
    <string name="italian">Italian</string>
    <string name="chinese">Chinese</string>
    <string name="turkish">Turkish</string>
    <string name="serbian_latin">Serbian (Latin)</string>
    <string name="hebrew">Hebrew</string>
    <string name="brazilian_portuguese">Brazilian Portuguese</string>
    <string name="norwegian_bokmal">Norwegian (Bokmål)</string>
    <string name="russian">Russian</string>
    <string name="japanese">Japanese</string>
    <string name="support_the_app">Support the app</string>
    <string name="support_the_app_donate">Donate</string>
    <string name="support_the_app_donate_text_playstore">Broccoli is free for everyone. But you can support the development of the app and buy me a cookie, coffee or burger. Thanks a lot!</string>
    <string name="support_the_app_donate_text_fdroid">Broccoli is free for everyone. But you can support the development of the app and buy me a coffee. Thanks a lot!</string>
    <string name="support_the_app_support_me_on_kofi" translatable="false">Support me on Ko-Fi</string>
    <string name="support_the_app_give_feedback">Give feedback</string>
    <string name="support_the_app_give_feedback_text">Do you like Broccoli? Tell us about it!</string>
    <string name="support_the_app_tell_your_friends">Tell your friends</string>
    <string name="support_the_app_tell_your_friends_text">Do your friends also like to cook? Tell them about Broccoli!</string>
    <string name="free_for_everyone">Free for everyone</string>
    <string name="buy">Buy</string>
    <string name="play_store_sign_in_message">Please sign in to Google Play Store.</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="share_the_app">Share the app</string>
    <string name="kofi_url" translatable="false">https://ko-fi.com/flauschtrud</string>
    <string name="eggplant">Eggplants</string>
    <string name="eggplant_terms">eggplant, eggplants, aubergine, aubergines</string>
    <string name="cauliflower">Cauliflower</string>
    <string name="cauliflower_terms">cauliflower</string>
    <string name="broad_bean">Broad beans</string>
    <string name="broad_bean_terms">broad beans, fava beans, faba beans</string>
    <string name="bean">Beans</string>
    <string name="bean_terms">common beans, french beans, green beans</string>
    <string name="broccoli">Broccoli</string>
    <string name="broccoli_terms">broccoli</string>
    <string name="chinese_cabbage">Chinese cabbage</string>
    <string name="chinese_cabbage_terms">chinese cabbage, napa cabbage</string>
    <string name="pea">Peas</string>
    <string name="pea_terms">peas</string>
    <string name="fennel">Fennel</string>
    <string name="fennel_terms">fennel</string>
    <string name="kale">Kale</string>
    <string name="kale_terms">kale</string>
    <string name="cucumber">Cucumbers</string>
    <string name="cucumber_terms">cucumber, cucumbers</string>
    <string name="celeriac">Celeriac</string>
    <string name="celeriac_terms">celeriac</string>
    <string name="kohlrabi">Kohlrabi</string>
    <string name="kohlrabi_terms">kohlrabi</string>
    <string name="pumpkin">Pumpkin</string>
    <string name="pumpkin_terms">pumpkin, pumpkins, hokkaido</string>
    <string name="leek">Leek</string>
    <string name="leek_terms">leek</string>
    <string name="corn">Corn</string>
    <string name="corn_terms">corn</string>
    <string name="chard">Chard</string>
    <string name="chard_terms">chard</string>
    <string name="carrot">Carrots</string>
    <string name="carrot_terms">carrot, carrots</string>
    <string name="bell_pepper">Bell peppers</string>
    <string name="bell_pepper_terms">peppers, bell pepper, bell peppers</string>
    <string name="parsnip">Parsnip</string>
</resources>