<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <Preference
            app:icon="@drawable/ic_menu_edit_24dp"
            app:key="feedback"
            app:title="@string/send_feedback"
            app:summary="@string/send_feedback_message">

                <intent android:action="android.intent.action.SENDTO"
                    android:data="@string/feedback_mailto">
                        <extra
                            android:name="android.intent.extra.SUBJECT"
                            android:value="@string/feedback_subject"/>
                </intent>

        </Preference>

        <Preference
            app:icon="@drawable/ic_info_24dp"
            app:key="version"
            app:title="@string/version"
            app:summary="@string/versionName" />

        <Preference
            app:icon="@drawable/ic_info_24dp"
            app:key="oss-licenses"
            app:title="@string/oss_license_title"
            app:summary="@string/preferences_license_summary" />

        <Preference
            app:icon="@drawable/ic_privacy_tip_24"
            app:key="privacy-policy"
            app:title="@string/privacy_policy">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/privacy_policy_url" />
        </Preference>

    </PreferenceScreen>