<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/text_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginBottom="8dp"
        android:text="@string/support_the_app_donate"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="?attr/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/support_the_app_donate_text" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/text_margin"
        android:paddingBottom="@dimen/text_margin">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buy_me_cookie_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buy"
            app:icon="@drawable/ic_cookie_24"
            app:layout_constraintEnd_toStartOf="@id/buy_me_coffee_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buy_me_coffee_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buy"
            app:icon="@drawable/ic_coffee_24"
            app:layout_constraintEnd_toStartOf="@id/buy_me_burger_button"
            app:layout_constraintStart_toEndOf="@id/buy_me_cookie_button"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buy_me_burger_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buy"
            app:icon="@drawable/ic_burger_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buy_me_coffee_button"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="buy_me_cookie_button,buy_me_coffee_button,buy_me_burger_button"
            app:flow_horizontalGap="@dimen/text_margin"
            app:flow_horizontalStyle="packed"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginBottom="8dp"
        android:text="@string/support_the_app_give_feedback"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="?attr/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/support_the_app_give_feedback_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/give_rating_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/rate_the_app"
        app:icon="@drawable/ic_star_rate_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginBottom="8dp"
        android:text="@string/support_the_app_tell_your_friends"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="?attr/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/support_the_app_tell_your_friends_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share_app_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/share_the_app"
        app:icon="@drawable/ic_menu_share_24dp" />

</LinearLayout>