<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.Broccoli">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.Broccoli.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_recipes"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorSecondaryToolbar"
            app:popupTheme="@style/ThemeOverlay.Broccoli.PopupOverlay">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height_for_accessibility"
                android:contentDescription="@string/categories"
                app:popupTheme="@style/ThemeOverlay.Broccoli.PopupOverlay" />

            <Button
                android:id="@+id/toolbar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height_for_accessibility"
                android:paddingStart="@dimen/text_margin"
                android:paddingEnd="8dp"
                android:drawablePadding = "4dp"
                android:drawableTint="?attr/colorPrimary"
                android:textColor="?attr/colorPrimary"
                android:layout_margin="@dimen/toolbar_button_margin"
                app:drawableEndCompat="@drawable/ic_close_24dp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/recipes_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="32dp"
        android:text="@string/create_a_recipe_prompt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone"/>

    <include layout="@layout/recipes_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/new_recipe"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>